[tool.poetry]
name = "python-oop"
version = "0.1.0"
description = ""
authors = ["Geomario <marm1984@gmail.com>"]
readme = "README.md"
packages = [{include = "python_oop", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4.6"
flake8-annotations = "^3.0.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
flake8 = "^7.0.0"
black = "^24.3.0"
pre-commit = "^3.6.2"
isort = "^5.13.2"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
